--- a/docs/man/man1/jx-gitops.1
+++ b/docs/man/man1/jx-gitops.1
@@ -26,7 +26,7 @@ GitOps utility commands
 
 .SH SEE ALSO
 .PP
-\fBjx\-gitops\-annotate(1)\fP, \fBjx\-gitops\-helm(1)\fP, \fBjx\-gitops\-ingress(1)\fP, \fBjx\-gitops\-kpt(1)\fP, \fBjx\-gitops\-label(1)\fP, \fBjx\-gitops\-namespace(1)\fP, \fBjx\-gitops\-split(1)\fP, \fBjx\-gitops\-version(1)\fP
+\fBjx\-gitops\-annotate(1)\fP, \fBjx\-gitops\-extsecret(1)\fP, \fBjx\-gitops\-helm(1)\fP, \fBjx\-gitops\-ingress(1)\fP, \fBjx\-gitops\-kpt(1)\fP, \fBjx\-gitops\-label(1)\fP, \fBjx\-gitops\-namespace(1)\fP, \fBjx\-gitops\-split(1)\fP, \fBjx\-gitops\-version(1)\fP
 
 
 .SH HISTORY
