--- a/docs/man/man1/jx-gitops-helm-stream.1
+++ b/docs/man/man1/jx-gitops-helm-stream.1
@@ -52,6 +52,10 @@ Generate the kubernetes resources for all helm charts in a version stream
     if set then disable splitting of multiple resources into separate files
 
 .PP
+\fB\-\-optional\fP[=false]
+    check if there is a charts dir and if not do nothing if it does not exist
+
+.PP
 \fB\-o\fP, \fB\-\-output\-dir\fP="."
     the output directory to generate the templates to
 
