--- a/docs/man/man1/jx-gitops-namespace.1
+++ b/docs/man/man1/jx-gitops-namespace.1
@@ -51,6 +51,12 @@ Updates all kubernetes resources in the given directory to the given namespace
 # updates the namespace of all the yaml resources in the given directory
   jx\-gitops namespace \-n cheese \-\-dir .
 
+.PP
+# sets the namespace property to the name of the child directory inside of 'config\-root/namespaces'
+  # e.g. so that the files 'config\-root/namespaces/cheese/\fI\&.yaml' get set to namespace 'cheese'
+  # and 'config\-root/namespaces/wine/\fP\&.yaml' are set to 'wine'
+  jx\-gitops namespace \-\-dir\-mode \-\-dir config\-root/namespaces
+
 
 .SH SEE ALSO
 .PP
