fix: regen docs

--- a/docs/man/man1/jx-gitops-helm-stream.1
+++ b/docs/man/man1/jx-gitops-helm-stream.1
@@ -32,6 +32,10 @@ Generate the kubernetes resources for all helm charts in a version stream
     the default domain name in the generated ingress
 
 .PP
+\fB\-\-git\-commit\fP[=false]
+    if set then the template command will git commit any changed files
+
+.PP
 \fB\-h\fP, \fB\-\-help\fP[=false]
     help for stream
 
@@ -42,10 +46,6 @@ Generate the kubernetes resources for all helm charts in a version stream
 .PP
 \fB\-\-no\-external\-secrets\fP[=false]
     if set then disable converting Secret resources to ExternalSecrets
-
-.PP
-\fB\-\-no\-git\-commit\fP[=false]
-    if set then the command will not git add/commit the generated resources
 
 .PP
 \fB\-\-no\-split\fP[=false]
