--- a/docs/man/man1/jx-gitops-ingress.1
+++ b/docs/man/man1/jx-gitops-ingress.1
@@ -28,6 +28,10 @@ Updates Ingress resources with the current ingress domain
     the domain to replace with whats in jx\-requirements.yml
 
 .PP
+\fB\-\-fail\-on\-parse\-error\fP[=false]
+    if enabled we fail if we cannot parse a yaml file as a kubernetes resource
+
+.PP
 \fB\-h\fP, \fB\-\-help\fP[=false]
     help for ingress
 
