chore: regen docs

--- a/docs/man/man1/jx-gitops-hash.1
+++ b/docs/man/man1/jx-gitops-hash.1
@@ -49,7 +49,7 @@ Annotates the given files with a hash of the given source files for ConfigMaps/S
 .SH EXAMPLE
 .PP
 # annotates the Deployments in a dir from some source ConfigMaps
-  jx\-gitops hash \-s foo/configmap.yaml \-s another/configmap.yaml \-d someDir%!(EXTRA string=jx\-gitops)
+  jx\-gitops hash \-s foo/configmap.yaml \-s another/configmap.yaml \-d someDir
 
 
 .SH SEE ALSO
