fix: regen docs

--- a/docs/man/man1/jx-gitops-scheduler.1
+++ b/docs/man/man1/jx-gitops-scheduler.1
@@ -15,7 +15,7 @@ jx\-gitops\-scheduler \- Generates the Lighthouse configuration from the SourceR
 
 .SH DESCRIPTION
 .PP
-Converts all Secret resources in the path to ExternalSecret CRDs
+Generates the Lighthouse configuration from the SourceRepository and Scheduler resources
 
 
 .SH OPTIONS
@@ -38,8 +38,8 @@ Converts all Secret resources in the path to ExternalSecret CRDs
 
 .SH EXAMPLE
 .PP
-# updates recursively labels all resources in the current directory
-  jx\-gitops scheduler \-\-dir=.
+# regenerate the lighthouse configuration from the Environment, Scheduler, SourceRepository resources
+  jx\-gitops scheduler \-\-dir config\-root/namespaces/jx \-out src/base/namespaces/jx/lighthouse\-config
 
 
 .SH SEE ALSO
