--- a/docs/man/man1/jx-gitops-condition.1
+++ b/docs/man/man1/jx-gitops-condition.1
@@ -29,21 +29,28 @@ Runs a command if the condition is true
 
 .PP
 \fB\-\-last\-commit\-msg\-contains\fP=""
-    matches if %s contains the given text
+    matches if last\-commit\-msg contains the given text
 
 .PP
 \fB\-\-last\-commit\-msg\-prefix\fP=""
-    matches if %s has the given prefix
+    matches if last\-commit\-msg has the given prefix
 
 .PP
 \fB\-\-last\-commit\-msg\-suffix\fP=""
-    matches if %s has the given suffix
+    matches if last\-commit\-msg has the given suffix
 
 
 .SH EXAMPLE
 .PP
 # runs a command if the last commit messsage has a given prefix
-  jx\-gitops condition \-\-last\-commit\-msg\-prefix 'Merge pull request' make all commit push
+  jx\-gitops condition \-\-last\-commit\-msg\-prefix 'Merge pull request' \-\- make all commit push
+
+.PP
+you can use ! in front of a filter to be the equivalant of not matching the condition. e.g.
+
+.PP
+# runs a command if the last commit message does not have a given prefix
+  %!s(MISSING) condition \-\-last\-commit\-msg\-prefix '!Merge pull request' \-\- make all commit push
 
 
 .SH SEE ALSO
