fix: regen docs

--- a/docs/man/man1/jx-gitops-condition.1
+++ b/docs/man/man1/jx-gitops-condition.1
@@ -50,7 +50,7 @@ you can use ! in front of a filter to be the equivalant of not matching the cond
 
 .PP
 # runs a command if the last commit message does not have a given prefix
-  %!s(MISSING) condition \-\-last\-commit\-msg\-prefix '!Merge pull request' \-\- make all commit push
+  jx\-gitops condition \-\-last\-commit\-msg\-prefix '!Merge pull request' \-\- make all commit push
 
 
 .SH SEE ALSO
