chore: regen docs

--- a/docs/man/man1/jx-gitops-requirement.1
+++ b/docs/man/man1/jx-gitops-requirement.1
@@ -26,7 +26,7 @@ Commands for working with jx\-requirements.yml
 
 .SH SEE ALSO
 .PP
-\fBjx\-gitops(1)\fP, \fBjx\-gitops\-requirement\-edit(1)\fP, \fBjx\-gitops\-requirement\-resolve(1)\fP
+\fBjx\-gitops(1)\fP, \fBjx\-gitops\-requirement\-edit(1)\fP, \fBjx\-gitops\-requirement\-merge(1)\fP, \fBjx\-gitops\-requirement\-resolve(1)\fP
 
 
 .SH HISTORY
