--- a/docs/man/man1/jx-gitops-kpt-update.1
+++ b/docs/man/man1/jx-gitops-kpt-update.1
@@ -36,7 +36,7 @@ Updates the kpt packages in the given directory
     filter on the Kptfile repository name  for which packages to update
 
 .PP
-\fB\-s\fP, \fB\-\-strategy\fP="alpha\-git\-patch"
+\fB\-s\fP, \fB\-\-strategy\fP="resource\-merge"
     the 'kpt pkg update' strategy to use
 
 .PP
