--- a/docs/man/man1/jx-gitops-helmfile-move.1
+++ b/docs/man/man1/jx-gitops-helmfile-move.1
@@ -55,7 +55,7 @@ So this command applies the namespace to all the generated resources and then mo
 .SH EXAMPLE
 .PP
 # moves the generated files in 'tmp' to the config root dir
-  jx\-gitops move \-\-dir config\-root \-\-from tmp
+  jx\-gitops helmfile move \-\-dir config\-root \-\-from tmp
 
 
 .SH SEE ALSO
