chore: regen docs

--- a/docs/man/man1/jx-gitops-helmfile-add.1
+++ b/docs/man/man1/jx-gitops-helmfile-add.1
@@ -15,7 +15,7 @@ jx\-gitops\-helmfile\-add \- Adds a chart to the local 'helmfile.yaml' file
 
 .SH DESCRIPTION
 .PP
-Resolves the helmfile.yaml from the version stream to specify versions and helm values
+Adds a chart to the local 'helmfile.yaml' file
 
 
 .SH OPTIONS
