--- a/docs/man/man1/jx-gitops.1
+++ b/docs/man/man1/jx-gitops.1
@@ -26,7 +26,7 @@ GitOps utility commands
 
 .SH SEE ALSO
 .PP
-\fBjx\-gitops\-annotate(1)\fP, \fBjx\-gitops\-condition(1)\fP, \fBjx\-gitops\-git(1)\fP, \fBjx\-gitops\-hash(1)\fP, \fBjx\-gitops\-helm(1)\fP, \fBjx\-gitops\-helmfile(1)\fP, \fBjx\-gitops\-image(1)\fP, \fBjx\-gitops\-ingress(1)\fP, \fBjx\-gitops\-kpt(1)\fP, \fBjx\-gitops\-kustomize(1)\fP, \fBjx\-gitops\-label(1)\fP, \fBjx\-gitops\-namespace(1)\fP, \fBjx\-gitops\-pr(1)\fP, \fBjx\-gitops\-repository(1)\fP, \fBjx\-gitops\-requirement(1)\fP, \fBjx\-gitops\-scheduler(1)\fP, \fBjx\-gitops\-split(1)\fP, \fBjx\-gitops\-version(1)\fP
+\fBjx\-gitops\-annotate(1)\fP, \fBjx\-gitops\-condition(1)\fP, \fBjx\-gitops\-git(1)\fP, \fBjx\-gitops\-hash(1)\fP, \fBjx\-gitops\-helm(1)\fP, \fBjx\-gitops\-helmfile(1)\fP, \fBjx\-gitops\-image(1)\fP, \fBjx\-gitops\-ingress(1)\fP, \fBjx\-gitops\-kpt(1)\fP, \fBjx\-gitops\-kustomize(1)\fP, \fBjx\-gitops\-label(1)\fP, \fBjx\-gitops\-namespace(1)\fP, \fBjx\-gitops\-pr(1)\fP, \fBjx\-gitops\-repository(1)\fP, \fBjx\-gitops\-requirement(1)\fP, \fBjx\-gitops\-scheduler(1)\fP, \fBjx\-gitops\-split(1)\fP, \fBjx\-gitops\-update(1)\fP, \fBjx\-gitops\-version(1)\fP
 
 
 .SH HISTORY
