chore: fix bad docs

--- a/docs/man/man1/jx-gitops-requirement-merge.1
+++ b/docs/man/man1/jx-gitops-requirement-merge.1
@@ -50,7 +50,7 @@ This lets you take requirements from, say, the output of a terraform plan and me
 
 .PP
 # merge requirements from a ConfigMap called 'terraform\-jx\-requiremnets' in the default namespace
-  %!s(MISSING) requirements merge
+  jx\-gitops requirements merge
 
 
 .SH SEE ALSO
