--- a/docs/man/man1/jx-gitops-image.1
+++ b/docs/man/man1/jx-gitops-image.1
@@ -46,11 +46,11 @@ Updates images in the kubernetes resources from the version stream
     the directory for the version stream. Defaults to 'versionStream' in the current \-\-dir
 
 .PP
-\fB\-c\fP, \fB\-\-version\-stream\-ref\fP=""
+\fB\-\-version\-stream\-ref\fP=""
     the git ref (branch, tag, revision) of the version stream to git clone. If not specified it defaults to the value in the jx\-requirements.yml
 
 .PP
-\fB\-n\fP, \fB\-\-version\-stream\-url\fP=""
+\fB\-\-version\-stream\-url\fP=""
     the git clone URL of the version stream. If not specified it defaults to the value in the jx\-requirements.yml
 
 
