--- a/docs/man/man1/jx-gitops-scheduler.1
+++ b/docs/man/man1/jx-gitops-scheduler.1
@@ -28,6 +28,10 @@ Generates the Lighthouse configuration from the SourceRepository and Scheduler r
     help for scheduler
 
 .PP
+\fB\-\-in\-repo\-config\fP[=false]
+    enables in repo configuration in lighthouse
+
+.PP
 \fB\-n\fP, \fB\-\-namespace\fP="jx"
     the namespace for the SourceRepository and Scheduler resources
 
