--- a/docs/man/man1/jx-gitops-helm.1
+++ b/docs/man/man1/jx-gitops-helm.1
@@ -26,7 +26,7 @@ Commands for working with helm charts
 
 .SH SEE ALSO
 .PP
-\fBjx\-gitops(1)\fP, \fBjx\-gitops\-helm\-stream(1)\fP, \fBjx\-gitops\-helm\-template(1)\fP
+\fBjx\-gitops(1)\fP, \fBjx\-gitops\-helm\-release(1)\fP, \fBjx\-gitops\-helm\-stream(1)\fP, \fBjx\-gitops\-helm\-template(1)\fP
 
 
 .SH HISTORY
