chore: regen docs

--- a/docs/man/man1/jx-gitops-helm-release.1
+++ b/docs/man/man1/jx-gitops-helm-release.1
@@ -52,6 +52,10 @@ Generate the kubernetes resources from a helm chart
     the username to access the chart repository. If not specified defaults to the environment variable $JX\_REPOSITORY\_USERNAME
 
 .PP
+\fB\-\-use\-helm\-plugin\fP[=false]
+    uses the jx binary plugin for helm rather than whatever helm is on the $PATH
+
+.PP
 \fB\-\-version\fP=""
     specify the version to release
 
