chore: regen docs

--- a/docs/man/man1/jx-gitops-apply.1
+++ b/docs/man/man1/jx-gitops-apply.1
@@ -34,16 +34,8 @@ Also the process detects if an ingress has changed (or similar changes) and retr
     help for apply
 
 .PP
-\fB\-\-last\-commit\-msg\-contains\fP=""
-    matches if last\-commit\-msg contains the given text
-
-.PP
-\fB\-\-last\-commit\-msg\-prefix\fP=""
-    matches if last\-commit\-msg has the given prefix
-
-.PP
-\fB\-\-last\-commit\-msg\-suffix\fP=""
-    matches if last\-commit\-msg has the given suffix
+\fB\-\-pull\-request\fP[=false]
+    specifies to apply the pull request contents into the PR branch
 
 
 .SH EXAMPLE
