chore: regenerate docs

--- a/docs/man/man1/jx-gitops-repository-add.1
+++ b/docs/man/man1/jx-gitops-repository-add.1
@@ -46,6 +46,10 @@ Add one or more repositories to the SourceConfig
 \[la]https://github.com/jenkins-x/jx-helpers/tree/master/docs/kind_filters.md\[ra]
 
 .PP
+\fB\-\-namespace\fP=""
+    the namespace to discover SourceRepository resources to default the GitKind. If not specified then use the current namespace
+
+.PP
 \fB\-s\fP, \fB\-\-scheduler\fP=""
     the name of the Scheduler to use for the repository
 
