--- a/docs/man/man1/jx-gitops-pr.1
+++ b/docs/man/man1/jx-gitops-pr.1
@@ -26,7 +26,7 @@ Commands for working with Pull Requests
 
 .SH SEE ALSO
 .PP
-\fBjx\-gitops(1)\fP, \fBjx\-gitops\-pr\-get(1)\fP, \fBjx\-gitops\-pr\-push(1)\fP
+\fBjx\-gitops(1)\fP, \fBjx\-gitops\-pr\-comment(1)\fP, \fBjx\-gitops\-pr\-get(1)\fP, \fBjx\-gitops\-pr\-push(1)\fP
 
 
 .SH HISTORY
