fix: regenerated docs

--- a/docs/man/man1/jx-gitops-scheduler.1
+++ b/docs/man/man1/jx-gitops-scheduler.1
@@ -44,8 +44,8 @@ Generates the Lighthouse configuration from the SourceRepository and Scheduler r
     the directory to look for SourceRepository resources. If not specified defaults config\-root/namespaces/$ns
 
 .PP
-\fB\-\-scheduler\-dir\fP=""
-    the directory to look for Scheduler resources. If not specified defaults versionStream/schedulers
+\fB\-\-scheduler\-dir\fP=[]
+    the directory to look for Scheduler resources. If not specified defaults 'schedulers' and 'versionStream/schedulers'
 
 
 .SH EXAMPLE
