--- a/docs/man/man1/jx-gitops-webhook-update.1
+++ b/docs/man/man1/jx-gitops-webhook-update.1
@@ -44,8 +44,8 @@ Updates the webhooks for all the source repositories optionally filtering by own
     the git token used to operate on the git repository. If not specified it's loaded from the git credentials file
 
 .PP
-\fB\-\-git\-user\fP=""
-    the git username used to operate on the git repository
+\fB\-\-git\-username\fP=""
+    the git username used to operate on the git repository. If not specified it's loaded from the git credentials file
 
 .PP
 \fB\-h\fP, \fB\-\-help\fP[=false]
