chore: regen docs

--- a/docs/man/man1/jx-gitops-copy.1
+++ b/docs/man/man1/jx-gitops-copy.1
@@ -5,7 +5,7 @@
 
 .SH NAME
 .PP
-jx\-gitops\-copy \- Copies resources with the given selector or name from a source namespace to a destination namespace
+jx\-gitops\-copy \- Copies resources (by default confimaps) with the given selector or name from a source namespace to a destination namespace
 
 
 .SH SYNOPSIS
@@ -15,7 +15,7 @@ jx\-gitops\-copy \- Copies resources with the given selector or name from a sour
 
 .SH DESCRIPTION
 .PP
-Copies kubernetes resources from a namespace to the current namespace
+Copies kubernetes resources (by default confimaps) from a namespace to the current namespace
 
 
 .SH OPTIONS
