--- a/docs/man/man1/jx-gitops-pr-comment.1
+++ b/docs/man/man1/jx-gitops-pr-comment.1
@@ -20,7 +20,7 @@ Adds a comment to the current pull request
 
 .SH OPTIONS
 .PP
-\fB\-\-comment\fP=""
+\fB\-c\fP, \fB\-\-comment\fP=""
     comment to add
 
 .PP
@@ -55,7 +55,7 @@ Adds a comment to the current pull request
 .SH EXAMPLE
 .PP
 # add comment
-  jx\-gitops pr comment "Message from Jenkins"
+  jx\-gitops pr comment \-c "message from Jenkins X pipeline"
 
 
 .SH SEE ALSO
