chore: regen docs

--- a/docs/man/man1/jx-gitops-helmfile-template.1
+++ b/docs/man/man1/jx-gitops-helmfile-template.1
@@ -47,6 +47,10 @@ Runs 'helmfile template' on the helmfile for each namespace putting the results 
 \fB\-o\fP, \fB\-\-output\-dir\fP=""
     the output directory. If not specified a temporary directory is created
 
+.PP
+\fB\-\-use\-helm\-plugin\fP[=false]
+    uses the jx binary plugin for helm rather than whatever helm is on the $PATH
+
 
 .SH EXAMPLE
 .PP
