--- a/docs/man/man1/jx-gitops-pr-label.1
+++ b/docs/man/man1/jx-gitops-pr-label.1
@@ -44,6 +44,10 @@ Adds a label to the current pull request
     help for label
 
 .PP
+\fB\-\-ignore\-no\-pr\fP[=false]
+    if an error is returned finding the Pull Request (maybe due to missing environment variables to find the PULL\_NUMBER) just push to the current branch instead
+
+.PP
 \fB\-\-log\-level\fP=""
     Sets the logging level. If not specified defaults to $JX\_LOG\_LEVEL
 
