--- a/docs/man/man1/jx-gitops-helmfile-resolve.1
+++ b/docs/man/man1/jx-gitops-helmfile-resolve.1
@@ -28,6 +28,10 @@ Resolves the helmfile.yaml from the version stream to specify versions and helm 
     if set then the template command will git commit the modified helmfile.yaml files
 
 .PP
+\fB\-\-helm\-binary\fP=""
+    specifies the helm binary location to use. If not specified defaults to using the downloaded helm plugin
+
+.PP
 \fB\-\-helmfile\fP=""
     the helmfile to resolve. If not specified defaults to 'helmfile.yaml' in the dir
 
