--- a/docs/man/man1/jx-gitops-kpt-update.1
+++ b/docs/man/man1/jx-gitops-kpt-update.1
@@ -5,7 +5,7 @@
 
 .SH NAME
 .PP
-jx\-gitops\-kpt\-update \- Updates the kpt packages in the given directory
+jx\-gitops\-kpt\-update \- Updates any kpt packages installed in a sub directory
 
 
 .SH SYNOPSIS
@@ -15,7 +15,19 @@ jx\-gitops\-kpt\-update \- Updates the kpt packages in the given directory
 
 .SH DESCRIPTION
 .PP
-Updates the kpt packages in the given directory
+Updates any kpt packages installed in a sub directory
+
+.PP
+If you know a specific directory which needs updating you can always use 'kpt' directly via:
+
+.PP
+.RS
+
+.nf
+      kpt pkg update mySubDir
+
+.fi
+.RE
 
 
 .SH OPTIONS
@@ -50,7 +62,8 @@ Updates the kpt packages in the given directory
 
 .SH EXAMPLE
 .PP
-# updates the kpt of all the yaml resources in the given directory
+# recurses the current dir looking for directories with Kptfile inside
+  # and upgrades the kpt package found there to the latest version
   jx\-gitops kpt \-\-dir .
 
 
