--- a/docs/man/man1/jx-gitops-upgrade.1
+++ b/docs/man/man1/jx-gitops-upgrade.1
@@ -44,6 +44,10 @@ Upgrades the GitOps git repository with the latest configuration and versions th
     help for upgrade
 
 .PP
+\fB\-\-ignore\-yaml\-error\fP[=false]
+    ignore kpt errors of the form: yaml: did not find expected node content
+
+.PP
 \fB\-\-namespace\fP="jx"
     the default namespace if none is specified in the helmfile.yaml or jx\-requirements.yml
 
@@ -54,6 +58,10 @@ Upgrades the GitOps git repository with the latest configuration and versions th
 .PP
 \fB\-r\fP, \fB\-\-repo\fP=""
     filter on the Kptfile repository name  for which packages to update
+
+.PP
+\fB\-s\fP, \fB\-\-strategy\fP="alpha\-git\-patch"
+    the 'kpt' strategy to use. To see available strategies type 'kpt pkg update \-\-help'. Typical values are: resource\-merge, fast\-forward, alpha\-git\-patch, force\-delete\-replace
 
 .PP
 \fB\-u\fP, \fB\-\-url\fP=""
