chore: regen docs

--- a/docs/man/man1/jx-gitops-git-setup.1
+++ b/docs/man/man1/jx-gitops-git-setup.1
@@ -28,7 +28,7 @@ This is typically used in a pipeline to ensure git can do commits.
 
 .PP
 \fB\-d\fP, \fB\-\-dir\fP=""
-    the directory to run the git push command from
+    the directory to run the git setup command from
 
 .PP
 \fB\-e\fP, \fB\-\-email\fP=""
