--- a/docs/man/man1/jx-gitops-git.1
+++ b/docs/man/man1/jx-gitops-git.1
@@ -26,7 +26,7 @@ Commands for working with Git
 
 .SH SEE ALSO
 .PP
-\fBjx\-gitops(1)\fP, \fBjx\-gitops\-git\-get(1)\fP, \fBjx\-gitops\-git\-setup(1)\fP
+\fBjx\-gitops(1)\fP, \fBjx\-gitops\-git\-clone(1)\fP, \fBjx\-gitops\-git\-get(1)\fP, \fBjx\-gitops\-git\-setup(1)\fP
 
 
 .SH HISTORY
